--- a/app/src/main/res/layout/view_image_overlay.xml
+++ b/app/src/main/res/layout/view_image_overlay.xml
@@ -1,5 +1,6 @@
 <merge
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,6 +16,41 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="10dp"
         />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp">
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/sdvAvatar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            fresco:roundAsCircle="true"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="10dp">
+            <TextView
+                android:id="@+id/tvUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                />
+            <TextView
+                android:id="@+id/tvUserDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                />
+        </LinearLayout>
+
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnShare"
@@ -78,7 +114,7 @@
                     android:layout_height="wrap_content"
                     android:textColorHint="@color/white"
                     android:layout_gravity="center_vertical"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:hint="写评论..."
                     />
             </LinearLayout>
