--- a/app/src/main/res/layout/activity_publish_image.xml
+++ b/app/src/main/res/layout/activity_publish_image.xml
@@ -30,11 +30,16 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="506dp"
-        android:orientation="vertical"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
 
         <ProgressBar
             android:id="@+id/progress_bar_upload_image"
@@ -43,6 +48,15 @@
             android:layout_height="3dp"
             android:layout_width="match_parent"
             android:visibility="gone"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp"
+       >
+
+
 
         <EditText
             android:id="@+id/evTitle"
@@ -67,16 +81,32 @@
         <GridView
             android:id="@+id/gvImage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
+            android:layout_height="320dp"
             android:columnWidth="100dp"
             android:gravity="center"
             android:horizontalSpacing="1dp"
             android:numColumns="3"
             android:stretchMode="columnWidth"
             android:verticalSpacing="2dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_map_marker"/>
+            <TextView
+                android:id="@+id/tvLocation"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+               />
+        </LinearLayout>
+
     </LinearLayout>
-
-
+        </LinearLayout>
+    </ScrollView>
 </android.support.design.widget.CoordinatorLayout>
