--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -205,7 +205,7 @@
             android:layout_width="match_parent"
             android:layout_height="42dp"
             android:padding="2dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="0.5dp"
             card_view:cardCornerRadius="0dp"
             >
             <LinearLayout
@@ -242,7 +242,7 @@
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:padding="2dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="0.5dp"
         card_view:cardCornerRadius="0dp"
         >
         <LinearLayout
@@ -272,6 +272,10 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp" />
 
     </LinearLayout>
 
