--- a/app/src/main/res/layout/viewholder_post_image_right.xml
+++ b/app/src/main/res/layout/viewholder_post_image_right.xml
@@ -38,6 +38,8 @@
                     android:textSize="@dimen/title_font"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLines="3"
+                    android:ellipsize="end"
                     android:layout_weight="1"/>
 
                 <TextView
