--- a/app/src/main/res/layout/viewholder_publish_manage_image.xml
+++ b/app/src/main/res/layout/viewholder_publish_manage_image.xml
@@ -24,12 +24,28 @@
             android:padding="10dp"
             android:orientation="horizontal">
 
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/cvContentImage"
-                android:layout_width="100dp"
-                android:layout_height="80dp"
-                fresco:placeholderImageScaleType="fitCenter"
-                fresco:placeholderImage="@color/gray_cc"/>
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:id="@+id/cvContentImage"
+                    android:layout_width="100dp"
+                    android:layout_height="80dp"
+                    fresco:placeholderImageScaleType="fitCenter"
+                    fresco:placeholderImage="@color/gray_cc"/>
+                <TextView
+                    android:id="@+id/tvImageCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/shape_radius"
+                    android:textSize="10sp"
+                    android:padding="3dp"
+                    android:textColor="@android:color/white"
+                    />
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -60,7 +76,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:paddingTop="0dp"
+            android:paddingBottom="10dp"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp">
 
             <TextView
                 android:id="@+id/tvContentDescription"
