--- a/app/src/main/res/layout/viewholder_publish_manage_video.xml
+++ b/app/src/main/res/layout/viewholder_publish_manage_video.xml
@@ -60,7 +60,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:paddingTop="0dp"
+            android:paddingBottom="10dp"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp">
 
             <TextView
                 android:id="@+id/tvContentDescription"
