--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,7 @@
     <dimen name="item_margin_vertical">8dp</dimen>
 
     <dimen name="image_margin">48dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="app_bar_height_200">200dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
